; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/axis/extr_artpec6_crypto.c_artpec6_crypto_aes_ctr_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/axis/extr_artpec6_crypto.c_artpec6_crypto_aes_ctr_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_skcipher = type { i32, i32 }
%struct.artpec6_cryptotfm_context = type { i32, i32 }

@CRYPTO_ALG_NEED_FALLBACK = common dso_local global i32 0, align 4
@ARTPEC6_CRYPTO_CIPHER_AES_CTR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.crypto_skcipher*)* @artpec6_crypto_aes_ctr_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @artpec6_crypto_aes_ctr_init(%struct.crypto_skcipher* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.crypto_skcipher*, align 8
  %4 = alloca %struct.artpec6_cryptotfm_context*, align 8
  store %struct.crypto_skcipher* %0, %struct.crypto_skcipher** %3, align 8
  %5 = load %struct.crypto_skcipher*, %struct.crypto_skcipher** %3, align 8
  %6 = call %struct.artpec6_cryptotfm_context* @crypto_skcipher_ctx(%struct.crypto_skcipher* %5)
  store %struct.artpec6_cryptotfm_context* %6, %struct.artpec6_cryptotfm_context** %4, align 8
  %7 = load %struct.crypto_skcipher*, %struct.crypto_skcipher** %3, align 8
  %8 = getelementptr inbounds %struct.crypto_skcipher, %struct.crypto_skcipher* %7, i32 0, i32 1
  %9 = call i32 @crypto_tfm_alg_name(i32* %8)
  %10 = load i32, i32* @CRYPTO_ALG_NEED_FALLBACK, align 4
  %11 = call i32 @crypto_alloc_sync_skcipher(i32 %9, i32 0, i32 %10)
  %12 = load %struct.artpec6_cryptotfm_context*, %struct.artpec6_cryptotfm_context** %4, align 8
  %13 = getelementptr inbounds %struct.artpec6_cryptotfm_context, %struct.artpec6_cryptotfm_context* %12, i32 0, i32 1
  store i32 %11, i32* %13, align 4
  %14 = load %struct.artpec6_cryptotfm_context*, %struct.artpec6_cryptotfm_context** %4, align 8
  %15 = getelementptr inbounds %struct.artpec6_cryptotfm_context, %struct.artpec6_cryptotfm_context* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = call i64 @IS_ERR(i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %24

19:                                               ; preds = %1
  %20 = load %struct.artpec6_cryptotfm_context*, %struct.artpec6_cryptotfm_context** %4, align 8
  %21 = getelementptr inbounds %struct.artpec6_cryptotfm_context, %struct.artpec6_cryptotfm_context* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @PTR_ERR(i32 %22)
  store i32 %23, i32* %2, align 4
  br label %30

24:                                               ; preds = %1
  %25 = load %struct.crypto_skcipher*, %struct.crypto_skcipher** %3, align 8
  %26 = getelementptr inbounds %struct.crypto_skcipher, %struct.crypto_skcipher* %25, i32 0, i32 0
  store i32 4, i32* %26, align 4
  %27 = load i32, i32* @ARTPEC6_CRYPTO_CIPHER_AES_CTR, align 4
  %28 = load %struct.artpec6_cryptotfm_context*, %struct.artpec6_cryptotfm_context** %4, align 8
  %29 = getelementptr inbounds %struct.artpec6_cryptotfm_context, %struct.artpec6_cryptotfm_context* %28, i32 0, i32 0
  store i32 %27, i32* %29, align 4
  store i32 0, i32* %2, align 4
  br label %30

30:                                               ; preds = %24, %19
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local %struct.artpec6_cryptotfm_context* @crypto_skcipher_ctx(%struct.crypto_skcipher*) #1

declare dso_local i32 @crypto_alloc_sync_skcipher(i32, i32, i32) #1

declare dso_local i32 @crypto_tfm_alg_name(i32*) #1

declare dso_local i64 @IS_ERR(i32) #1

declare dso_local i32 @PTR_ERR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
